bug fix: cover z-index

--- a/app/assets/stylesheets/widgets/_cover.css.scss
+++ b/app/assets/stylesheets/widgets/_cover.css.scss
@@ -3,7 +3,7 @@
 	height: 250px;
 	overflow: hidden;
 	//background-color: gray;
-	z-index: 1;
+	z-index: -3;
 	position: relative;
 
 	img { 
@@ -16,6 +16,7 @@
 .blur {
 	width: 100%;
 	height: 250px;
+	z-index: -2;
 	position: absolute;
 	background-color: rgba(0,0,0,.5);
 }
